--- a/src/frontend/DFS/MainWindow.xaml
+++ b/src/frontend/DFS/MainWindow.xaml
@@ -1,11 +1,56 @@
 ﻿<Window x:Class="frontend.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DFS WPF Frontend" Height="200" Width="400">
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
+        Title="Distributed File System" Height="300" Width="600" WindowStartupLocation="CenterScreen" Background="Black">
+
    <Grid>
-      <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-         <Button Content="Call function1" Click="OnButtonClick" Padding="10"/>
-         <TextBlock Name="OutputText" Margin="10" FontSize="16" Text="Click the button to call function1."/>
-      </StackPanel>
+      <Grid.ColumnDefinitions>
+         <ColumnDefinition Width="250"></ColumnDefinition>
+         <ColumnDefinition Width="80*"></ColumnDefinition>
+      </Grid.ColumnDefinitions>
+
+      <Grid Grid.Column="0" Background="#FFF1F1F1">
+         <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="70*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+         </Grid.RowDefinitions>
+
+         <Grid Grid.Row="0" Margin="20,5,5,5">
+            <StackPanel Orientation="Horizontal">
+               <fa:FontAwesome Icon="Home" Margin="1" VerticalAlignment="Center"></fa:FontAwesome>
+                  <TextBlock Margin="1">Home</TextBlock>            
+            </StackPanel>
+         </Grid>
+         <Grid Grid.Row="1" Margin="20,5,5,5">
+            <StackPanel Orientation="Horizontal">
+               <fa:FontAwesome Icon="Server" Margin="1" VerticalAlignment="Center"></fa:FontAwesome>
+               <TextBlock Margin="1">Server</TextBlock>
+            </StackPanel>
+         </Grid>
+         <Grid Grid.Row="2" Margin="20,5,5,5"></Grid>
+         <Grid Grid.Row="3" Margin="20,5,0,5" Background="#FFB9B9B9">
+            <StackPanel Orientation="Horizontal">
+               <fa:FontAwesome Icon="SignOut" Margin="20,5,5,5" VerticalAlignment="Center"></fa:FontAwesome>
+               <Grid>
+                  <Grid.RowDefinitions>
+                     <RowDefinition Height="60*"></RowDefinition>                  
+                     <RowDefinition Height="40*"></RowDefinition>                  
+                  </Grid.RowDefinitions>
+
+                  <Grid Grid.Row="0">
+                     <TextBlock>User Name</TextBlock>
+                  </Grid>
+                  <Grid Grid.Row="1">
+                     <TextBlock>Logout</TextBlock>
+                  </Grid>
+               </Grid>
+            </StackPanel>
+         </Grid>
+      </Grid>
+
+      <Grid Grid.Column="1" Background="White" ></Grid>
    </Grid>
 </Window>
