--- a/src/frontend/DFS/MainWindow.xaml
+++ b/src/frontend/DFS/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="frontend.MainWindow"
+﻿<Window x:Class="DFS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
-        Title="Distributed File System" Height="300" Width="600" WindowStartupLocation="CenterScreen" Background="Black">
+        Title="Distributed File System" Height="600" Width="1000" WindowStartupLocation="CenterScreen" Background="Black">
 
    <Grid>
       <Grid.ColumnDefinitions>
@@ -51,6 +51,8 @@
          </Grid>
       </Grid>
 
-      <Grid Grid.Column="1" Background="White" ></Grid>
+      <Grid Grid.Column="1" Background="White">
+         <Frame Name="MainFrame" NavigationUIVisibility="Hidden"></Frame>
+      </Grid>
    </Grid>
 </Window>
